<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0dcff6" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="10dp" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/mainmenu_lab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#0DCFF6"
                android:gravity="start|center_vertical"
                android:text="@string/functionLab"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/mainmenu_prime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mainmenu_lab"
                android:layout_marginLeft="30dp"
                android:background="#0DCFF6"
                android:gravity="start|center_vertical"
                android:text="@string/Lab_prime"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/mainmenu_factor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mainmenu_prime"
                android:layout_marginLeft="30dp"
                android:background="#0DCFF6"
                android:gravity="start|center_vertical"
                android:text="@string/Lab_factor"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/mainmenu_random"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mainmenu_factor"
                android:layout_marginLeft="30dp"
                android:background="#0DCFF6"
                android:gravity="start|center_vertical"
                android:text="@string/Lab_random"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/main_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0DCFF6"
            android:gravity="start|center_vertical"
            android:text="@string/help"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0DCFF6"
            android:gravity="start|center_vertical"
            android:text="@string/about"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/aboutUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0DCFF6"
            android:gravity="start|center_vertical"
            android:text="@string/aboutUpdate"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_selector"
            android:text="@string/exit"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/blue_selector"
            android:text="@string/setting"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>