<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    
    android:gravity="center"
    android:orientation="horizontal" >

    <TextView
        android:background="@color/blue_main"
        android:id="@+id/lab_tab_prime"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Lab_prime"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/lab_tab_factor"
        android:layout_width="0dp"
        android:background="@color/blue_main"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Lab_factor"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/lab_tab_random"
        android:layout_width="0dp"
        android:background="@color/blue_main"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Lab_random"
        android:textColor="@color/white" />

</LinearLayout>