<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/tv_Lab_prime1"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:background="#0DCFF6"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="["
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_Lab_primeDown"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tv_Lab_prime1"
            android:background="#0DCFF6"
            android:gravity="center"
            android:hint="0"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textColorHint="#66FFFF" />

        <TextView
            android:id="@+id/tv_Lab_prime2"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/et_Lab_primeDown"
            android:background="#0DCFF6"
            android:gravity="bottom|center"
            android:paddingBottom="10dp"
            android:text=","
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_Lab_primeCalc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/blue_selector"
            android:text="@string/findOut"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_Lab_prime3"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/btn_Lab_primeCalc"
            android:background="#0DCFF6"
            android:gravity="center"
            android:paddingRight="5dp"
            android:text="]"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_Lab_primeUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/tv_Lab_prime3"
            android:layout_toRightOf="@id/tv_Lab_prime2"
            android:background="#0DCFF6"
            android:gravity="center"
            android:hint="@string/pleaseInputUpperLimit"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textColorHint="#66FFFF" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/cb_Lab_primeIfList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/listResults" />

        <Button
            android:id="@+id/btn_Lab_primeClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@drawable/blue_selector"
            android:text="@string/cleanScreen"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_Lab_primeResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/There_are_some_primes_between_a_and_b" />

    <TextView
        android:id="@+id/tv_Lab_primeList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:scrollHorizontally="true"
        android:text=" " />

</LinearLayout>